--- a/OC-Nodejs/views/todolist.ejs
+++ b/OC-Nodejs/views/todolist.ejs
@@ -8,9 +8,29 @@
 
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
       rel="stylesheet">
+
 </head>
 <body>
 <header><h1 style="text-align: center;">TODOLIST</h1></header>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <a class="navbar-brand" href="#">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNav">
+    <ul class="navbar-nav">
+      <li class="nav-item active">
+        <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/todolist">Todolist</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="/chat">Chat</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 <div class="container">
     <div class="row">
         <div class="col-sm">
@@ -155,6 +175,7 @@
     </div>
 
 </body>
+
 <script>
 
 $(document).ready(function () {
